--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -242,6 +242,7 @@
     &__wrap
       padding: 0
       background-color: $dark
+      background-image: none
     &__title
       margin-bottom: 4.2rem
       font-size: 1.67rem
