--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -5,7 +5,7 @@
     max-width: 63.07rem
     margin: auto
     margin-top: -20.2rem
-    background: $black url('../img/bg-lines-footer.svg') no-repeat center / cover
+    background: $black url('../img/bg-lines.svg') no-repeat center / cover
     padding: 2.3rem
   &__title
     text-transform: uppercase
