--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -33,6 +33,7 @@
     text-transform: uppercase
     text-align: center
     background-color: $primary
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.1)
     color: $light
     padding: 1.214rem 0
     // &--animated
